# pypatree

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  README.md.in  justfile  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
pypatree/: __init__.py  __main__.py  display.py  test.py
pypatree/config/: __init__.py
pypatree/discovery/: __init__.py  test.py
pypatree/display/: __init__.py  test.py
pypatree/introspection/: __init__.py  test.py
pypatree/tree/: __init__.py  test.py
scripts/: lib.py  smoke_test.py  update_readme.py
tests/: test_integration.py
tests/fixtures/broken_pkg/broken/: __init__.py
tests/fixtures/test_prefixed/realpkg/: __init__.py
tests/stubs/brokenpkg/: pyproject.toml
tests/stubs/brokenpkg/brokenpkg/: __init__.py
tests/stubs/test_stub/: pyproject.toml
tests/stubs/test_stub/test_stub/: __init__.py
tests/stubs/testpkg/: pyproject.toml
tests/stubs/testpkg/testpkg/: __init__.py
