[project]
name = "pypatree"
version = "0.1.0"
license = "MIT"
authors = [
  {name = "Yohaï-Eliel Berreby", email = "me@yberreby.com"},
]
description = "Pretty-print a project's module tree"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "setuptools>=75.3.2",
    "tyro>=0.9.35",
]

[project.scripts]
pypatree = "pypatree.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
