[project]
name = "pypatree"
version = "0.1.0"
license = "MIT"
authors = [
  {name = "Yohaï-Eliel Berreby", email = "me@yberreby.com"},
]
description = "Pretty-print a project's module tree"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["python", "module", "tree", "introspection", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "tyro>=0.9.35",
]

[project.urls]
Homepage = "https://github.com/yberreby/pypatree"
Repository = "https://github.com/yberreby/pypatree"

[project.scripts]
pypatree = "pypatree.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.35.0",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.4",
    "rust-just>=1.43.1",
    "testpkg",
    "brokenpkg",
]

[tool.uv.sources]
testpkg = {path = "tests/stubs/testpkg", editable = true}
brokenpkg = {path = "tests/stubs/brokenpkg", editable = true}

[tool.pytest.ini_options]
testpaths = ["pypatree", "tests"]
python_files = ["test.py", "test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
omit = ["pypatree/__main__.py"]

[tool.coverage.report]
exclude_lines = ["if __name__"]

[tool.ruff]
exclude = ["tests/stubs"]

[tool.basedpyright]
typeCheckingMode = "standard"
exclude = [".venv", "tests/stubs"]
reportAny = false
reportExplicitAny = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
